--- a/src/components/scss/feedback.scss
+++ b/src/components/scss/feedback.scss
@@ -6,6 +6,7 @@
   max-width: 560px;
   border-radius: 16px;
   border: 1px solid grey;
+  background-color: #ffffff;
   &__header {
     display: flex;
     justify-content: space-between;
