--- a/src/components/scss/feedback.scss
+++ b/src/components/scss/feedback.scss
@@ -5,12 +5,12 @@
   margin: 0 auto;
   max-width: 560px;
   border-radius: 16px;
-  border: 1px solid grey;
   background-color: #ffffff;
   &__header {
     display: flex;
     justify-content: space-between;
-    padding: 16px 16px 16px 32px;
+    align-items: center;
+    padding: 16px 22px 16px 32px;
     border-bottom: 1px solid #eaecf0;
   }
   &__title {
@@ -26,24 +26,37 @@
     height: 13px;
   }
   &__content {
-    padding: 24px 32px;
+    padding: 23px 32px 24px 32px;
+  }
+  &__rating {
+    margin-bottom: 8px;
   }
   &__comment {
     margin-bottom: 16px;
   }
-  &__photos {
-    margin-bottom: 24px;
+  &__footer {
+    padding: 15px 16px 15px 0;
+    border-top: 1px solid #eaecf0;
+    text-align: right;
+  }
+  &__send {
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    background-color: #53c6d1;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
+    cursor: pointer;
   }
 }
 
 .feedback-author {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  max-height: 68px;
-  width: max-content;
-  align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
   margin-bottom: 32px;
   &__img {
     width: 102px;
@@ -51,8 +64,14 @@
     border-radius: 6px;
     margin-right: 20px;
   }
+  &__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
   &__title {
-    margin: 0;
+    margin: 0 0 3px 0;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
