--- a/src/components/scss/photos.scss
+++ b/src/components/scss/photos.scss
@@ -1,5 +1,6 @@
 .feedback-photos {
   display: flex;
+  overflow: hidden;
   &__button {
     padding: 33px;
     max-width: 80px;
@@ -17,6 +18,7 @@
     border-radius: 6px;
     margin-right: 8px;
     overflow: hidden;
+    flex-shrink: 0;
   }
   &__img {
     object-fit: cover;
@@ -32,5 +34,14 @@
     position: absolute;
     top: 8px;
     right: 8px;
+  }
+}
+
+@media (max-width: 768px) {
+  .feedback-photos {
+    flex-wrap: wrap;
+    &__wrap-img {
+      margin-bottom: 8px;
+    }
   }
 }
