Реализована установка ретинга и добавление фото

--- a/src/components/scss/comment.scss
+++ b/src/components/scss/comment.scss
@@ -4,6 +4,7 @@
     height: 100px;
     resize: none;
     padding: 12px;
+    outline: none;
     border: 1px solid #eaecf0;
     background-color: #fafafa;
     border-radius: 6px;
