--- a/src/components/scss/rating.scss
+++ b/src/components/scss/rating.scss
@@ -22,6 +22,9 @@
     display: flex;
     justify-content: space-between;
     padding: 0 0 0 5px;
+    & > input {
+      display: none;
+    }
   }
   &__star {
     width: 21px;
