--- a/src/components/scss/setting.scss
+++ b/src/components/scss/setting.scss
@@ -8,7 +8,9 @@
   font-family: "Montserrat", Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #2c3e50;
   height: 100vh;
   background-color: #ebedf0;
@@ -29,4 +31,30 @@
   top: 50%;
   transform: translateY(-50%);
   outline: none;
+}
+
+.alert {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+  background-color: #15a758;
+  padding: 6px 12px;
+  border-radius: 6px;
+  &__text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
+    margin-right: 12px;
+  }
+  &__close {
+    padding: 6px;
+    background-color: #ffffff;
+    opacity: 0.4;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 }
