--- a/src/scss/comment.scss
+++ b/src/scss/comment.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100px;
     resize: none;
-    padding: 12px;
+    padding: 12px 11px;
     outline: none;
     border: 1px solid #eaecf0;
     background-color: #fafafa;
