--- a/src/scss/feedback.scss
+++ b/src/scss/feedback.scss
@@ -3,6 +3,7 @@
 .feedback {
   font-family: Montserrat;
   margin: 0 auto;
+  width: 100%;
   max-width: 560px;
   border-radius: 16px;
   background-color: #ffffff;
@@ -10,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 22px 16px 32px;
+    padding: 17px 22px 14px 32px;
     border-bottom: 1px solid #eaecf0;
   }
   &__title {
@@ -28,11 +29,14 @@
       cursor: pointer;
     }
   }
+  &__author {
+    margin-bottom: 35px;
+  }
   &__content {
-    padding: 23px 32px 24px 32px;
+    padding: 24px 32px 16px 32px;
   }
   &__rating {
-    margin-bottom: 8px;
+    margin-bottom: 5px;
   }
   &__comment {
     margin-bottom: 16px;
@@ -43,7 +47,7 @@
     text-align: right;
   }
   &__send {
-    padding: 8px 12px;
+    padding: 8px 13px;
     border-radius: 6px;
     border: none;
     background-color: #53c6d1;
@@ -61,7 +65,6 @@
 .feedback-author {
   display: flex;
   justify-content: flex-start;
-  margin-bottom: 32px;
   &__img {
     width: 102px;
     height: 68px;
@@ -94,8 +97,12 @@
 
 @media (max-width: 576px) {
   .feedback {
+    max-width: 560px;
     &__header {
       padding: 16px 22px 15px 16px;
+    }
+    &__author {
+      margin-bottom: 27px;
     }
     &__content {
       padding: 14px 16px 24px 16px;
@@ -106,9 +113,8 @@
   }
   .feedback-author {
     flex-wrap: wrap;
-    margin-bottom: 24px;
     &__img {
-      margin-bottom: 13px;
+      margin-bottom: 14px;
       width: 84px;
       height: 56px;
     }
