--- a/src/scss/photos.scss
+++ b/src/scss/photos.scss
@@ -9,7 +9,7 @@
     display: none;
   }
   &__label {
-    background-image: url("../../img/plus.svg");
+    background-image: url("../img/plus.svg");
     background-repeat: no-repeat;
     background-position: center;
     padding: 33px;
@@ -37,6 +37,9 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
+    &:hover {
+      display: block;
+    }
     &:hover + img {
       display: block;
     }
